--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./main.css">
     <title>GitHub Guide</title>
 </head>
 <body>
-    <h1>This is a guide to GitHub</h1>
+    <h1>Guide to GitHub and Git</h1>
+    <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem animi voluptatibus illum tenetur dolorum sed, accusamus assumenda vitae repellendus aperiam quo modi laborum mollitia ut ducimus veritatis. Impedit, nulla iure.</p>
 </body>
 </html>
