--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>GitHub Guide</title>
 </head>
 <body>
-    <h1>Guide to GitHub and Git</h1>
+    <h1>Guide to GitHub</h1>
     <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem animi voluptatibus illum tenetur dolorum sed, accusamus assumenda vitae repellendus aperiam quo modi laborum mollitia ut ducimus veritatis. Impedit, nulla iure.</p>
 </body>
 </html>
